fix hover on mobile & anchor links

--- a/global.css
+++ b/global.css
@@ -39,6 +39,10 @@ a {
     color: black;
 }
 
+a * {
+    color: var(--background);
+}
+
 .mobile-only {
     display: none;
 }
